<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/playlist_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:vmSafeMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="220dp"
            android:backgroundTint="@android:color/transparent"
            android:id="@+id/loginLauncherLinkerButtonPL">
        </ImageButton>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/listbackground"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/playerBarPL"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:isScrollContainer="false">

                    <ImageButton
                        android:id="@+id/RewindPL"
                        app:backgroundTint="@android:color/transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|start"
                        app:srcCompat="@drawable/rewind"
                        android:layout_marginBottom="8dp"
                        android:clickable="true" />

                    <ImageButton
                        android:id="@+id/PrevPL"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@android:color/transparent"
                        android:layout_gravity="bottom|start"
                        app:srcCompat="@drawable/previous"
                        android:clickable="true"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content" />

                    <ImageButton
                        android:id="@+id/fabIOPL"
                        android:height="100dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|bottom"
                        android:layout_marginBottom="8dp"
                        android:clickable="true"
                        app:backgroundTint="@android:color/transparent"
                        android:src="@drawable/play"/>

                    <ImageButton
                        android:id="@+id/NextPL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|bottom"
                        app:backgroundTint="@android:color/transparent"
                        app:srcCompat="@drawable/skip"
                        android:layout_marginBottom="8dp"
                        android:clickable="true" />

                    <ImageButton
                        android:id="@+id/RandomPL"
                        app:backgroundTint="@android:color/transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|start"
                        app:srcCompat="@drawable/shuffle"
                        android:clickable="true"
                        android:layout_marginBottom="8dp" />
                </LinearLayout>
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="8dp"
                    android:layout_above="@id/playerBarPL"
                    android:id="@+id/seekBarPL"/>
                <ListView
                    android:cacheColorHint="@android:color/transparent"
                    android:background="@drawable/listbackground"
                    android:id="@+id/ListViewPL"
                    android:layout_above="@id/seekBarPL"
                    android:choiceMode="singleChoice"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="match_parent">
                </ListView>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>

