<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/editPlaylistHead"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText android:id="@+id/playListName"
        android:maxLines="1"
        android:cursorVisible="false"
        android:inputType="textPersonName"
        android:ems="10"
        android:imeOptions="actionDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Playlist Name" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="Click song to remove from playlist"
        android:id="@+id/playlistAddInfo"
        android:layout_below="@id/playListName"/>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="right"
        android:layoutDirection="ltr">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/discardNewPlaylist"
            android:layout_width="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_height="52dp"
            android:src="@drawable/trash"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/saveNewPlaylist"
            android:layout_width="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_height="52dp"
            android:src="@drawable/check">
        </android.support.design.widget.FloatingActionButton>
        />
    </LinearLayout>
    <ListView
        android:background="@drawable/listbackground"
        android:listSelector="#E0ECF8"
        android:id="@+id/playListSongs"
        android:choiceMode="singleChoice"
        android:layout_width="match_parent"
        android:cacheColorHint="#0000"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_below="@id/editPlaylistHead"
        android:layout_height="match_parent">
    </ListView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addSongsToPlaylist"
        android:layout_width="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="14dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_height="wrap_content"
        android:src="@drawable/whiteplus"/>
</RelativeLayout>
