<resources>
    <string name="app_name">OneStream</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit_list">Edit Playlist</string>
    <string name="onestream_login_button">Set OneStream Playlist Domain</string>
    <string name="spotify_login_button">Login to Spotify</string>
    <string name="spotify_logout_button">Logout/Change User</string>
    <string name="googlemusic_login_button">Login to GoogleMusic</string>
    <string name="googlemusic_logout_button">Logout/Change User</string>
    <string name="section_format">Hello World from section: %1$d</string>
...
